Changes to Apache License and to version 0.2